extends Node

func _on_btn2analogs_pressed():
	get_tree().change_scene("res://Sample/Sample2Analogs.tscn")


func _on_btn1analogs1button_pressed():
	get_tree().change_scene("res://Sample/Sample1Paddle2Button.tscn")


func _on_btn2analogs2_pressed():
	get_tree().change_scene("res://Sample/Sample1Paddle1Stick1Button.tscn")


func _on_btn2analogs3_pressed():
	get_tree().change_scene("res://Debug/Debug.tscn")
